# learn-cpp

./: CMakeLists.txt  capital_cities.cpp  main.cpp  test_setup.cpp  tests.cpp
app/: CMakeLists.txt  main.cpp  test.h
apps/bus_stops/: app.cpp  bus_stops_test.cpp  tests.cpp
apps/bus_stops_2/: app.cpp  bus_stops_test.cpp  tests.cpp
apps/capital_cities/: app.cpp  capital_cities_test.cpp  tests.cpp
apps/synonims/: app.cpp  tests.cpp
exercises/: CMakeLists.txt
exercises/src/_test_setup/: app.h  test_setup.cpp  test_setup.h
exercises/src/bus_stops/: app.cpp  app.h  tests.cpp
exercises/src/bus_stops_2/: app.cpp  tests.cpp
exercises/src/capital_cities/: app.cpp  tests.cpp
exercises/src/names/: app.cpp  tests.cpp
exercises/src/sorted/: app.cpp  tests.cpp
exercises/src/synonims/: app.cpp  tests.cpp
googletest/: CMakeLists.txt
include/: test_setup.h
